schema/testdata/errors/where_mismatched_operator_for_matching_lhs_rhs.keel
model Profile {
    fields {
        username Text
    }

    @permission(
        //expect-error:38:40:AttributeExpressionError:cannot use operator '>=' with types Text and Text
        expression: profile.username >= "adaam2",
        actions: [get]
    )
}

task NewProfile {
    fields {
        username Text
    }

    @permission(
        //expect-error:41:43:AttributeExpressionError:cannot use operator '>=' with types Text and Text
        expression: newProfile.username >= "adaam2"
    )
}
